--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,6 +1,30 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8a679c">  <td>20/04/22 10:25:57</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Base.Startup(java.lang.String)[pri:0, instance:execution.Base@3224f60b]">Startup</td> 
-  <td>main@438135304</td>   <td></td> </tr>
+<tr bgcolor="66a57e">  <td>20/04/23 23:19:12</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.Startup(java.lang.String)[pri:0, instance:execution.Bestsellers@4f063c0a]">&gt;&gt;Startup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@352359770</td>   <td></td> </tr>
+<tr bgcolor="8a679c">  <td>20/04/23 23:19:27</td>   <td>14833</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Bestsellers.test1()[pri:0, instance:execution.Bestsellers@4f063c0a]">test1</td> 
+  <td>main@352359770</td>   <td></td> </tr>
+<tr bgcolor="8a679c">  <td>20/04/23 23:19:28</td>   <td>16594</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Bestsellers.test2(java.lang.String, java.lang.String)[pri:0, instance:execution.Bestsellers@4f063c0a]">test2</td> 
+  <td>main@352359770</td>   <td></td> </tr>
+<tr bgcolor="8a679c">  <td>20/04/23 23:19:29</td>   <td>17161</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Bestsellers.test2(java.lang.String, java.lang.String)[pri:0, instance:execution.Bestsellers@4f063c0a]">test2</td> 
+  <td>main@352359770</td>   <td></td> </tr>
+<tr bgcolor="8a679c">  <td>20/04/23 23:19:30</td>   <td>17624</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Bestsellers.test2(java.lang.String, java.lang.String)[pri:0, instance:execution.Bestsellers@4f063c0a]">test2</td> 
+  <td>main@352359770</td>   <td></td> </tr>
+<tr bgcolor="8a679c">  <td>20/04/23 23:19:30</td>   <td>18054</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Bestsellers.test2(java.lang.String, java.lang.String)[pri:0, instance:execution.Bestsellers@4f063c0a]">test2</td> 
+  <td>main@352359770</td>   <td></td> </tr>
+<tr bgcolor="8a679c">  <td>20/04/23 23:19:30</td>   <td>18468</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Bestsellers.test2(java.lang.String, java.lang.String)[pri:0, instance:execution.Bestsellers@4f063c0a]">test2</td> 
+  <td>main@352359770</td>   <td></td> </tr>
+<tr bgcolor="8a679c">  <td>20/04/23 23:19:31</td>   <td>18922</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Bestsellers.test2(java.lang.String, java.lang.String)[pri:0, instance:execution.Bestsellers@4f063c0a]">test2</td> 
+  <td>main@352359770</td>   <td></td> </tr>
+<tr bgcolor="8a679c">  <td>20/04/23 23:19:31</td>   <td>19353</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Bestsellers.test2(java.lang.String, java.lang.String)[pri:0, instance:execution.Bestsellers@4f063c0a]">test2</td> 
+  <td>main@352359770</td>   <td></td> </tr>
+<tr bgcolor="8a679c">  <td>20/04/23 23:19:32</td>   <td>19778</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Bestsellers.test2(java.lang.String, java.lang.String)[pri:0, instance:execution.Bestsellers@4f063c0a]">test2</td> 
+  <td>main@352359770</td>   <td></td> </tr>
+<tr bgcolor="8a679c">  <td>20/04/23 23:19:32</td>   <td>20196</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Bestsellers.test2(java.lang.String, java.lang.String)[pri:0, instance:execution.Bestsellers@4f063c0a]">test2</td> 
+  <td>main@352359770</td>   <td></td> </tr>
+<tr bgcolor="8a679c">  <td>20/04/23 23:19:33</td>   <td>20620</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Bestsellers.test3()[pri:0, instance:execution.Bestsellers@4f063c0a]">test3</td> 
+  <td>main@352359770</td>   <td></td> </tr>
+<tr bgcolor="66a57e">  <td>20/04/23 23:19:33</td>   <td>20976</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.afterclass()[pri:0, instance:execution.Bestsellers@4f063c0a]">&lt;&lt;afterclass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@352359770</td>   <td></td> </tr>
 </table>
